[project]
name = "cluster-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyyaml"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: tests that submit real jobs to the cluster (deselected by default)"]
addopts = "-m 'not integration'"
